infra/development/K8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 5000 # cluster port
      targetPort: 5000 # containerPort from Deployment
  type: ClusterIP
