infra/development/K8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080 # cluster port
      targetPort: 8080 # containerPort from Deployment
  type: ClusterIP
